<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>

    <!-- Main activity -->
    <string name="header_main">Authorize Trello Doing</string>
    <string name="click_app_key_link">Click the link below and copy the app key to the text field</string>
    <string name="app_key_link_here">App key link should be here</string>
    <string name="app_key_hint">Paste app key here</string>
    <string name="submit_button">Submit</string>
    <string name="click_token_link">Click the link below and copy the token to the text field</string>
    <string name="token_link_here">Token link should be here</string>
    <string name="token_hint">Paste token here</string>
    <string name="boards_here">Boards should be here</string>

    <!-- Doing widget-->
    <string name="widget_name">Doing</string>
    <string name="list_name">Doing</string>
    <string name="no_card">Not doing anything</string>
    <string name="clock_out">Clock Out</string>
    <string name="keep_doing">Keep doing</string>
    <string name="set_deadline">Set Deadline</string>
    <string name="last_updated">Last updated </string>
    <string name="refresh">Refresh</string>
    <string name="done">Done</string>

    <string name="get_app_key">Get App Key</string>
    <string name="insert_app_key">Enter the App Key</string>
    <string name="get_token">Get Token</string>
    <string name="insert_token">Enter Token</string>
    <string name="get_app_key_summary">User must be logged into to trello in the default browser
    </string>
    <string name="app_key_summary">Copy the App Key and paste it here</string>
    <string name="get_token_summary">App key must be present.</string>
    <string name="token_summary">Copy the token and paste it here</string>
    <string name="delay_summary">Time to wait before reaching deadline or trying to refresh</string>
    <string name="delay">Delay</string>
    <string name="start_hour_summary">What hour does the day start</string>
    <string name="start_hour">Start hour</string>
    <string name="end_hour_summary">What time does the day end</string>
    <string name="end_hour">End hour</string>
    <string name="add_personal_card">Add personal card</string>
    <string name="cancel_button">Cancel</string>
    <string name="separator">|</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="wait_while_loading">Wait while loading...</string>
    <string name="offline">Offline</string>
    <string name="personal">Personal</string>
    <string name="work">Work</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="card_action">Card action</string>
    <string name="clocked_off">Clocked Off</string>
    <string name="enter_delay">Enter delay</string>
    <string name="set_delay_text">How many hours?</string>
    <string name="deadline_set_for">Deadline set for</string>
    <string name="start_doing_something">Start doing something!!!</string>
    <string name="existing_delay">Existing delay</string>
    <string name="loading_text">Loading...</string>
    <string name="today_this_week">Today/This Week</string>
    <string name="get_cards_from">Board:</string>
    <string name="no_todo_list">No todo list</string>
    <string name="no_today_list">No today list</string>
    <string name="no_doing_list">No doing list</string>
    <string name="no_done_list">No done list</string>
    <string name="no_clocked_off_list">No clocked off list</string>
    <string name="token_missing">Authentication token missing. Go to settings and add it there.
    </string>
    <string name="add_card">Add card</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="recording_audio">Recording audio...</string>
    <string name="playing_audio">Playing audio...</string>
    <string name="select_board">Select board</string>
    <string name="clock_on">Clock on</string>
    <string name="change_what_you_are_doing">Change what you are doing!!!</string>
    <string name="two_things_at_once">You are doing two things at once!!!</string>
    <string name="doing_reminder">Doing Reminder</string>
    <string name="sync">Sync</string>
    <string name="no_this_week_list">No this week list</string>
    <string name="hours_remaining_in_day">hour(s) remaining in the day</string>
    <string name="minimum_hours_in_day">Minimum number of hours of work that should be done in a
        day
    </string>
    <string name="hours_in_day">Hours in a day</string>
    <string name="cards_been_in_todoy_too_long">A card has been in \'Today\' too long</string>
    <string name="two_things_clocked_off">Two cards are clocked off!!!</string>
    <string name="cards_been_in_week_too_long">A card has been in \'This Week\' too long</string>
    <string name="cancel">Cancel</string>
    <string name="todo">Todo</string>
    <string name="open">Open</string>
    <string name="today_empty">\'Today\' empty</string>
    <string name="this_week_empty">\'This Week\' empty</string>
    <string name="boards">Boards</string>

</resources>
