<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_list_item"
                android:orientation="vertical"
                android:padding="8dip">

    <TextView
        android:id="@+id/instruction"
        style="@style/instruction_text"
        android:text="@string/confirm" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button.Light"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button.Light"
            android:layout_weight="1"
            android:id="@+id/confirmed"
            android:text="@string/delete"/>

    </LinearLayout>

</RelativeLayout>