<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:background="@drawable/layout_list_item"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/existing_delay_text"
            style="@style/warning_text"
            android:visibility="gone"/>
    </LinearLayout>

    <EditText
        android:id="@+id/delay_input"
        android:hint="@string/set_delay_text"
        android:paddingTop="10dip"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:layout_below="@id/delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/delay_input"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            style="@style/Button.Light"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button.Light"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/delete"/>

        <Button
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            style="@style/Button.Light"
            android:layout_weight="1"
            android:text="@string/done"/>

    </LinearLayout>

</RelativeLayout>