<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base"
    android:orientation="vertical"
    android:background="@drawable/layout_board"
    android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/widget_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/widget_name"
        android:textStyle="bold"
        android:textSize="20dip"></TextView>

    <TextView
        android:id="@+id/last_checked"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingRight="5dp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/last_updated"
        android:textColor="@color/white"
        android:textSize="10dip"></TextView>

    <TextView
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/refresh"
        android:textColor="@color/white"
        android:textSize="10dip"></TextView>

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:text="@string/separator"
        android:layout_toRightOf="@id/refresh"
        android:textColor="@color/white"
        android:textSize="10dip"></TextView>

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/separator"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="10dip"></TextView>

    <RelativeLayout
        android:id="@+id/list"
        android:layout_below="@id/widget_name"
        android:layout_above="@id/last_checked"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:background="@drawable/layout_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_card"
            android:gravity="center_vertical|left"
            android:padding="50px"
            android:textColor="@color/black"
            android:text="@string/no_card"
            android:textSize="15dip"></TextView>

        <LinearLayout
            android:id="@+id/buttons"
            android:orientation="horizontal"
            android:layout_below="@id/card_name"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_personal_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/add139"
                style="@style/doing_button"></ImageView>

            <ImageView
                android:id="@+id/keep_doing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/redo"
                style="@style/doing_button"></ImageView>

            <ImageView
                android:id="@+id/set_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sand15"
                style="@style/doing_button"></ImageView>

            <ImageView
                android:id="@+id/clock_out"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/check51"
                android:layout_weight="1"
                style="@style/doing_button"></ImageView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>